--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==3.8.1
+click==8.2.1
 diff-match-patch==20241021
 dj-database-url==3.0.1
 Django==5.1.6
 django-environ==0.12.0
 django-import-export==4.3.7
 gunicorn==23.0.0
+h11==0.16.0
 packaging==25.0
 pillow==11.1.0
 psycopg2-binary==2.9.10
 sqlparse==0.5.3
 tablib==3.8.0
+uvicorn==0.35.0
 whitenoise==6.9.0
