--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
 asgiref==3.8.1
+certifi==2025.8.3
+charset-normalizer==3.4.2
 click==8.2.1
+cloudinary==1.44.1
 diff-match-patch==20241021
 dj-database-url==3.0.1
 Django==5.1.6
+django-cloudinary-storage==0.3.0
 django-environ==0.12.0
 django-import-export==4.3.7
+django-resized==1.0.3
 gunicorn==23.0.0
 h11==0.16.0
+idna==3.10
 packaging==25.0
 pillow==11.1.0
 psycopg2-binary==2.9.10
+requests==2.32.4
+six==1.17.0
 sqlparse==0.5.3
 tablib==3.8.0
+urllib3==2.5.0
 uvicorn==0.35.0
 whitenoise==6.9.0
