--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cloudinary==1.44.1
 diff-match-patch==20241021
 dj-database-url==3.0.1
 Django==5.1.6
+django-ckeditor-5==0.2.18
 django-cloudinary-storage==0.3.0
 django-environ==0.12.0
 django-import-export==4.3.7
